# rust-exe

./: Cargo.toml  README.md  bors.toml  deno.jsonc  reference.md  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: rust-clippy.yml  rust.yml
doc/: reference.md
examples/: EyRe.rs  args.rs  commit.rs  hello  many.rs  once_cell.rs
src/: arg_stream.rs  cli.rs  crates.rs  git_hashing.rs  hashing.rs  lib.rs  main-lib.rs  main.rs  run.rs  toolchain.rs  util.rs
src/toolchain/: manifests.txt  releases.rs
tests/: integration.rs
