[package]
autobins = false
autoexamples = false
default-run = "rust"
description = "#!/usr/bin/env rust"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "rust-exe"
repository = "https://github.com/jeremyBanks/rust-exe"
version = "0.0.0-dev-2022-06-08"

[[bin]]
name = "rust"
path = "src/main.rs"

[[bin]]
name = "rust-exe"
path = "src/main.rs"

[dependencies]
color-eyre = "0.6.1"
eyre = "0.6.8"
home = "0.5.3"
once_cell = "1.12.0"
proc-macro2 = { version = "1.0.39", features = ["span-locations"] }
quote = "1.0.18"
sha-1 = "0.10.0"
syn = { version = "1.0.96", features = ["full", "extra-traits", "visit", "visit-mut", "fold"] }
toml = "0.5.9"
tracing = "0.1.34"
env_logger = "0.9.0"
heck = "0.4.0"
serde = "1.0.137"
tempfile = "3.3.0"
regex = "1.5.6"
cargo-lock = "8.0.1"

[dev-dependencies]
expect-test = "1.3.0"
