[package]
autobins = false
autoexamples = false
default-run = "rust"
description = "#!/usr/bin/env rust"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "rust-exe"
repository = "https://github.com/jeremyBanks/rust-exe"
version = "0.0.20220611"

[[bin]]
name = "rust"
path = "src/main.rs"

[[bin]]
name = "rust-exe"
path = "src/main-exe.rs"

[dependencies]
cargo-lock = { version = "8.0.1", features = ["dependency-tree"] }
color-eyre = "0.6.1"
crates-index = "0.18.8"
env_logger = "0.9.0"
eyre = "0.6.8"
heck = "0.4.0"
home = "0.5.3"
once_cell = "1.12.0"
proc-macro2 = { version = "1.0.39", features = ["span-locations"] }
quote = "1.0.18"
regex = "1.5.6"
semver = "1.0.9"
serde = "1.0.137"
serde_json = "1.0.81"
sha-1 = "0.10.0"
syn = { version = "1.0.96", features = ["full", "extra-traits", "visit", "visit-mut", "fold"] }
tempfile = "3.3.0"
toml_edit = { version = "0.14.4", features = ["easy", "serde"] }
tracing = "0.1.35"

[dev-dependencies]
expect-test = "1.3.0"
