[package]
autoexamples = false
default-run = "rust"
description = "#!/usr/bin/env rust"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "rust-exe"
repository = "https://github.com/jeremyBanks/rust-exe"
version = "0.0.20220615"

[dependencies]
# cargo_metadata = "0.14.2"
# crates-index = "0.18.8"
# proc-macro2 = { version = "1.0.39", features = ["span-locations"] }
# quote = "1.0.18"
# regex = "1.5.6"
# semver = "1.0.10"
# serde = "1.0.137"
# serde_json = "1.0.81"
# tempfile = "3.3.0"
cargo-lock = { version = "8.0.1", features = ["dependency-tree"] }
color-eyre = "0.6.1"
expect-test = "1.3.0"
eyre = "0.6.8"
heck = "0.4.0"
home = "0.5.3"
indexmap = "1.8.2"
once_cell = "1.12.0"
sha-1 = "0.10.0"
syn = { version = "1.0.96", features = ["full", "extra-traits", "visit"] }
toml_edit = { version = "0.14.4", features = ["easy", "serde"] }
tracing = "0.1.35"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.11", features = ["std", "env-filter"] }

[dev-dependencies]
